metadata/force-app/main/default/objects/CustomName_SkUYC__c/CustomName_SkUYC__c.object-meta.xml
<CustomObject>
    <description>Description_juLPW</description>
    <label>CustomLabel_Ytmeu</label>
    <nameField>
        <label>CustomLabel_Ytmeu</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_Ytmeus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>