metadata/force-app/main/default/objects/CustomName_SkUYC__c/fields/CustomField_dCQsi__c.field-meta.xml
<CustomField>
    <fullName>CustomField_dCQsi__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldTIBJw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>